unit_tests/preprocessor/errors/missing-include.correct
preprocessor/errors/missing-include:1: error: this-file-does-not-exist.h: no such file or directory
